--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -17,8 +17,10 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "module-alias": "^2.2.3",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
@@ -28,7 +30,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.7"
   },
   "_moduleAliases": {
     "@": "./dist"
