feat:reset password added

--- a/user-service/package.json
+++ b/user-service/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
