--- a/user-service/package.json
+++ b/user-service/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "passport": "^0.7.0",
