workflow: setup build and publish docker image configurations

--- a/.github/workflows/chat-build.yaml
+++ b/.github/workflows/chat-build.yaml
@@ -1,10 +1,10 @@
-name: Build and publish Notification service to Docker Hub
+name: Build and publish Chat service to Docker Hub
 
 on:
   push:
     branches: ['main']
     paths:
-      - "notification-service/**"
+      - "chat-service/**"
   workflow_dispatch:
   
 jobs:
@@ -24,6 +24,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context:  ./notification-service/
+          context:  ./chat-service/
           push: true
-          tags: rithickramanthali/learnwise-notification:latest
+          tags: rithickramanthali/learnwise-chat:latest
+          
