--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^20.12.7",
     "@types/nodemailer": "^6.4.14",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.3"
   }
 }
