fix:ts error while running docker

--- a/manifests/k8s/deployments/auth.yaml
+++ b/manifests/k8s/deployments/auth.yaml
@@ -17,6 +17,8 @@ spec:
       containers:
       - image: rithickramanthali/learnwise-auth:latest
         name: auth-service
+        ports:
+        - containerPort: 4001
         env:
             - name: NODE_PATH
               value: "/app/dist" 
