--- a/manifests/k8s/deployments/chat.yaml
+++ b/manifests/k8s/deployments/chat.yaml
@@ -17,6 +17,8 @@ spec:
       containers:
       - image: rithickramanthali/learnwise-chat:latest
         name: chat-service
+         ports:
+        - containerPort: 4006
         envFrom:
           - configMapRef:
               name: chat-service-config
