--- a/manifests/k8s/deployments/notification.yaml
+++ b/manifests/k8s/deployments/notification.yaml
@@ -17,6 +17,8 @@ spec:
       containers:
       - image: rithickramanthali/learnwise-notification:latest
         name: notification-service
+        ports:
+        - containerPort: 4003
         envFrom:
           - configMapRef:
               name: notification-service-config
