--- a/manifests/k8s/deployments/payment.yaml
+++ b/manifests/k8s/deployments/payment.yaml
@@ -17,6 +17,8 @@ spec:
       containers:
       - image: rithickramanthali/learnwise-payment:latest
         name: payment-service
+        ports:
+        - containerPort: 4005
         envFrom:
           - configMapRef:
               name: payment-service-config
