--- a/manifests/k8s/deployments/user.yaml
+++ b/manifests/k8s/deployments/user.yaml
@@ -17,6 +17,8 @@ spec:
       containers:
       - image: rithickramanthali/learnwise-user:latest
         name: user-service
+        ports:
+        - containerPort: 4002
         envFrom:
           - configMapRef:
               name: user-service-config
