--- a/payment-service/tsconfig.json
+++ b/payment-service/tsconfig.json
@@ -1,18 +1,26 @@
 {
   "compilerOptions": {
-    "target": "es2016",                   
-    "module": "commonjs",      
-    "esModuleInterop": true,                                        
-    "forceConsistentCasingInFileNames": true,            
-    "strict": true,                                           
-    "skipLibCheck": true,
+    "target": "esnext",
+    "module": "commonjs",
+    "lib": ["esnext"],
+    "allowJs": true,
+    "checkJs": true,
     "outDir": "./dist",
     "rootDir": "./src",
+    "removeComments": false,
+    "strict": true,
+    "noImplicitAny": false,
+    "noUnusedLocals": true,
+    "moduleResolution": "node",
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
-    },                              
+    },
+    "typeRoots": ["node_modules/@types"],
+    "esModuleInterop": true,
+    "skipLibCheck": false,
+    "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["./dist", "./node_modules"],
-  "include": ["./src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["./dist", "./node_modules"]
 }
