--- a/.github/workflows/auth-build.yaml
+++ b/.github/workflows/auth-build.yaml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2  
       
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -25,5 +28,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context:  ./auth-service/
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: rithickramanthali/learnwise-auth:latest
