--- a/.github/workflows/auth-build.yaml
+++ b/.github/workflows/auth-build.yaml
@@ -6,7 +6,7 @@ on:
     paths:
       - "auth-service/**"
   workflow_dispatch:
-  
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -16,18 +16,23 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2  
-      
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver-opts: image=moby/buildkit:latest,network=host
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-    
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context:  ./auth-service/
+          context: ./auth-service/
           platforms: linux/amd64,linux/arm64
           push: true
           tags: rithickramanthali/learnwise-auth:latest
