fix:QEMU addded in workflow

--- a/.github/workflows/payment-build.yaml
+++ b/.github/workflows/payment-build.yaml
@@ -2,11 +2,11 @@ name: Build and publish Payment service to Docker Hub
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
     paths:
       - "payment-service/**"
   workflow_dispatch:
-  
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -14,16 +14,20 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-      
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-    
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context:  ./payment-service/
+          context: ./payment-service/
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: rithickramanthali/learnwise-payment:latest
