--- a/manifests/k8s/deployments/zookeeper.yaml
+++ b/manifests/k8s/deployments/zookeeper.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: zookeeper
-          image: confluentinc/cp-zookeeper:6.2.0
+          image: bitnami/zookeeper:latest
           ports:
             - containerPort: 2181
           env:
