--- a/manifests/k8s/ingress-controller.yaml
+++ b/manifests/k8s/ingress-controller.yaml
@@ -5,60 +5,53 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/enable-cors: "true" 
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://phonebazaar.shop"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://learnwise-client.onrender.com"
 spec:
   ingressClassName: webapprouting.kubernetes.azure.com
   rules:
-  - host: phonebazaar.shop
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: learnwisefrontend-service
-            port:
-              number: 5173
-      - path: /api/auth
-        pathType: Prefix
-        backend:
-          service:
-            name: learnwise-auth-service
-            port:
-              number: 4001
-      - path: /api/user
-        pathType: Prefix
-        backend:
-          service:
-            name: learnwise-user-service
-            port:
-              number: 4002
-      - path: /api/notification
-        pathType: Prefix
-        backend:
-          service:
-            name: learnwise-notification-service
-            port:
-              number: 4003
-      - path: /api/course
-        pathType: Prefix
-        backend:
-          service:
-            name: learnwise-course-service
-            port:
-              number: 4004
-      - path: /api/payment
-        pathType: Prefix
-        backend:
-          service:
-            name: learnwise-payment-service
-            port:
-              number: 4005
-      - path: /api/chat
-        pathType: Prefix
-        backend:
-          service:
-            name: learnwise-chat-service
-            port:
-              number: 4006
+    - host: phonebazaar.shop
+      http:
+        paths:
+          - path: /api/auth
+            pathType: Prefix
+            backend:
+              service:
+                name: learnwise-auth-service
+                port:
+                  number: 4001
+          - path: /api/user
+            pathType: Prefix
+            backend:
+              service:
+                name: learnwise-user-service
+                port:
+                  number: 4002
+          - path: /api/notification
+            pathType: Prefix
+            backend:
+              service:
+                name: learnwise-notification-service
+                port:
+                  number: 4003
+          - path: /api/course
+            pathType: Prefix
+            backend:
+              service:
+                name: learnwise-course-service
+                port:
+                  number: 4004
+          - path: /api/payment
+            pathType: Prefix
+            backend:
+              service:
+                name: learnwise-payment-service
+                port:
+                  number: 4005
+          - path: /api/chat
+            pathType: Prefix
+            backend:
+              service:
+                name: learnwise-chat-service
+                port:
+                  number: 4006
