fix:errors while hosting on azure

--- a/manifests/k8s/ingress-controller.yaml
+++ b/manifests/k8s/ingress-controller.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
     cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://learnwise-client.onrender.com"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://learnwise-client.vercel.app"
 spec:
   ingressClassName: webapprouting.kubernetes.azure.com
   rules:
