--- a/manifests/k8s/ingress-controller.yaml
+++ b/manifests/k8s/ingress-controller.yaml
@@ -34,6 +34,13 @@ spec:
                 name: learnwise-notification-service
                 port:
                   number: 4003
+          - path: /socket.io
+            pathType: Prefix
+            backend:
+              service:
+                name: learnwise-chat-service
+                port:
+                  number: 4006        
           - path: /api/course
             pathType: Prefix
             backend:
